# recursive-light

./: .gitignore  .pre-commit-config.yaml  API_KEYS_EXPLAINED.md  COMP_MEMORY_RETRIEVAL_ANALYSIS.md  DESIGN-NOTES-LLM1-COMPLETE-ROLE.md  DEVELOPMENT.md  INSTALL.md  MEMORY_RETRIEVAL_COMPARISON.txt  MEMORY_RETRIEVAL_EXEC_SUMMARY.md  META-DOMAIN-RETRIEVAL-INVESTIGATION.md  NEXT-SESSION-QUICKSTART.md  PERSONHOOD-FLOW-ARCHITECTURE.md  PHASE-3B-3-INTEGRATION-PLAN.md  Phase_6_Advanced_Search.md  QUICKSTART.md  README.md  STATUS.md  STATUS_UPDATE.md  VOLUMETRIC-GAP-ANALYSIS.md  WAVE1-2-SESSION-2025-11-03.md  clinerules.md  docker-compose.yml  setup.sh
api/: .env.example  .gitignore  ARCHITECTURAL-ASSUMPTIONS.md  Cargo.toml  SECURITY-AUDIT-REPORT.md  schema.sql
api/benches/: bm25_search.rs
api/examples/: simple_usage.rs
api/migrations/: 20251024000001_initial_schema.sql  20251024000002_add_flow_process_tables.sql  20251101000001_add_conversation_memory.sql  20251104000001_add_cam_system.sql  20251119000001_add_personhood_tables.sql
api/src/: api_error.rs  autonomous_judgement.rs  flow_process.rs  hlip_integration.rs  lib.rs  llm_error.rs  llm_error_prototype.rs  memory.rs  mock_llm.rs  prompt_engine.rs  test_utils.rs  token_optimization.rs
api/src/cam/: embeddings.rs  manager.rs  mod.rs  qdrant_storage.rs  storage.rs  types.rs
api/src/domains/: mod.rs
api/src/dual_llm/: config.rs  conscious_signal.rs  insight_extraction.rs  insight_processor.rs  memory_tiering.rs  mod.rs  processors.rs  prompts.rs  types.rs  unified_system_prompt.rs  unified_system_v2.rs
api/src/personhood/: manager.rs  mod.rs  person.rs  relationship.rs  temporal.rs
api/tests/integration/: boundary_oscillation_tests.rs
archive/coordination-2025-10-24/: EXECUTIVE_SUMMARY.md  PRE_PHASE_MISSION.md  PRE_PHASE_VALIDATION_RESULTS.md  README.md  architecture-report.md  coverage-baseline-validation.md  coverage-report.md  coverage-summary.txt  integration-report.md  llm-error-validation.md  memory-validation.md  qa-report.md  security-report.md  synthesis-report.md
coordination-workspace/: framework-philosopher-report.md
design-docs/: SESSION-HANDOFF.md
design-docs/collective-associative-memory/: CAM-DESIGN.md  TABLE-OF-CONTENTS.md
design-docs/dual-llm-implementation/: llm-architecture-design.md  memory-systems-design.md  software-architecture-integration.md
memory-bank/: NEXT-SESSION-QUICKSTART.md  active-context.md  activeContext.md  dual-llm-architecture.md  framework-concepts.md  frontend-backend.md  integration-protocols.md  memory-systems.md  progress.md  projectbrief.md  retrieval-immediate-actions.md  sci-memory-retrieval-evidence-report.md  session-2025-10-25-phase3-mvp.md  testing-coordination-session.md  testing-philosophy.md  token-efficiency.md
memory-bank/context/: api-implementation.md  development-practices.md  dual-llm-architecture.md  framework-concepts.md  techContext.md  (+7 more)
(+40 files in other folders)
