[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bincode = "1.3"
anyhow = "1.0"
dotenv = "0.15.0"
# SQLx with SQLite support (and future PostgreSQL support)
sqlx = { version = "0.7", features = [ "any", "sqlite", "postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate" ] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
