[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bincode = "1.3"
anyhow = "1.0"
dotenvy = "0.15"
# SQLx with SQLite support (and future PostgreSQL support)
# Wave 4: Removed "any" feature to eliminate MySQL/rsa dependency (RUSTSEC-2023-0071)
sqlx = { version = "0.8", features = [ "sqlite", "postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate" ] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Wave 1: BM25 proper implementation
bm25 = "2.3"
# Wave 2: Proper logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Wave 2: Proper error handling (by Kat Marchán, they/them)
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# Wave 3: Performance benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bm25_search"
harness = false
